# bodo

./: .codecov.yml  .cursorrules  .gitignore  AGENTS.md  Cargo.toml  DESIGN.md  LICENSE  README.md  ROADMAP.md  USAGE.md  build.rs  cargo.toml  demo_dry_run.sh  design.md  test_dry_run.sh  write_files.sh  yek.toml  yek.yaml
.cargo/: config.toml
.config/: nextest.toml
.github/: copilot-instructions.md
`src/: script_loader.rs`
bodo/: Cargo.toml
bodo/src/: cli.rs  config.rs  lib.rs  main.rs  plugin.rs  task.rs  watch.rs
docs/: sandbox-dry-run.md
examples/: infinite_printer.rs
prompts/: implementation
scripts/: ask.js  askds.js  basic.yaml  script.yaml
src/: cli.rs  config.rs  debug.rs  designer.rs  env.rs  errors.rs  graph.rs  lib.rs  main.rs  manager.rs  metrics.rs  platform.rs  plugin.rs  process.rs  prompt.rs  recovery.rs  sandbox.rs  script_loader.rs  task.rs  watch.rs
tests/: added_coverage_tests.rs  additional_cli_test.rs  additional_execution_plugin_full_test.rs  additional_execution_plugin_test.rs  additional_path_plugin_test.rs  additional_plugin_config_test.rs  additional_prefix_plugin_test.rs  additional_script_loader_concurrent_test.rs  additional_script_loader_error_test.rs  additional_script_loader_success_test.rs  additional_watch_plugin_test.rs  all_coverage.rs  as_any_test.rs  build_graph_config_tasks_only_test.rs  build_rs_check.rs  build_rs_integration_test.rs  build_rs_test.rs  cli_additional_args_test.rs  cli_error_test.rs  cli_get_task_name_subtask_test.rs  cli_parser_test.rs  cli_test.rs  cli_tests.rs  complete_coverage.rs  (+125 more)
(+52 files in other folders)
