[package]
name = "bodo"
version = "0.1.0"
edition = "2021"
description = "A modern task runner and build tool"
license = "MIT"
repository = "https://github.com/bodo-run/bodo"

[dependencies]
clap = { version = "4.2", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
anyhow = "1.0"
colored = "3.0.0"
globset = "0.4"
humantime = "2.1"
walkdir = "2.3"
notify = "8"
chrono = "0.4"
terminal_size = "0.4.1"
log = "0.4"
env_logger = "0.11.6"
async-trait = "0.1.86"
validator = { version = "0.16", features = ["derive"] }
schemars = { version = "0.8", features = ["derive"] }
tempfile = "3.8"
tracing = "0.1"
fastrand = "2.0"

[dev-dependencies]

[features]
default = ["tokio", "petgraph", "dialoguer", "serde_json"]
tokio = []
petgraph = []
dialoguer = []
serde_json = []
