[package]
name = "bodo"
version = "0.1.0"
edition = "2021"
authors = ["Mohsen"]
description = "Task runner in Rust"

[dependencies]
clap = { version = "4.4", features = ["derive", "cargo"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0"
rayon = "1.7"
notify = { version = "6.1", features = ["serde"] }
petgraph = "0.6"
dialoguer = { version = "0.11", features = ["history"] }
